--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <h3>What is Copy Path?</h3>
 
-        <p>It is a Windows Explorer extension that adds:
+        <p>A Windows Explorer extension that adds:
           <ul>
             <li><strong>Copy File Path</strong> and <strong>Copy File Name</strong> commands to the <strong>right-click file</strong> action;</li>
             <li><strong>Copy Folder Path</strong> and <strong>Copy Folder Name</strong> commands to the <strong>right-click folder</strong> action.</li>
@@ -52,13 +52,13 @@
 
         <h3>How to install?</h3>
 
-        <p>Just <a href="https://github.com/sother/CopyPath/raw/master/release/CopyPathSetup.exe" target="_blank" onclick="_gaq.push(['_trackEvent','Download','CopyPathSetup.exe',this.href]);">INSTALLER</a>download the installer</a>, run it and you're done!</p>
+        <p>Just <a href="https://github.com/sother/CopyPath/raw/master/release/CopyPathSetup.exe" target="_blank" onclick="_gaq.push(['_trackEvent','Download','CopyPathSetup.exe',this.href]);">download the installer</a>, run it and you're done!</p>
 
-        <h3>Copyright and Warranties</h3>
+        <h3>Copyright</h3>
 
-        <p>Copyright (c) by Luciano Sother</p>
+        <p>Author: <a href="http://sother.info">Luciano Sother</a></p>
 
-        <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
+        <p class="warranty">THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 
         <p><a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.</p>
       </section>
